# budgetcli

./: CONTRIBUTING.md  LICENSE  README.md  env.exemple  pyproject.toml  requirements.txt  setup.cfg
.devcontainer/: devcontainer.json
.github/workflows/: build.yaml  publish.yaml  test.yaml
src/budgetcli/: abstract.py  auth.py  commands.py  credentials.py  data_manager.py  exceptions.py  main.py  models.py  settings.py  transactions.py  utils.py
src/budgetcli/cli/: add.py  config.py  display.py
src/budgetcli/commands/: add.py  auth.py  config.py
src/budgetcli/utils/: config.py  dates.py  display.py
src/mybudget/: main.py
tests/: conftest.py  test_hello.py
tests/fixtures/: append_categories.json  append_transactions.json  create_categories_sheet.json  create_transactions_sheet.json  get_categories_sheet.json  get_sheet.json  list_categories.json  list_transactions.json  one_category.json  one_transaction.json  query_month_transactions.txt  query_name_categories.txt  update_budget.json  update_categories.json  update_transactions.json
tests/integration/: test_auth.py  test_cli.py  test_data_manager.py  test_manager.py
tests/unit/: test_budget.py  test_categories.py  test_cli.py  test_commands.py  test_data_manager.py  test_models.py  test_transactions.py
