[metadata]
name = budgetcli
version = 0.0.1
author = Madalin Popa
author_email = "Madalin Popa" contact@madalinpopa.com
description = A simple budgeting app, written in Python
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.11
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Utilities, Budget CLI

[options]
package_dir = 
  =src
packages = find:
include_package_data = True
install_requires =
  typer[all]
  google-auth
  google-auth-httplib2
  google-api-python-client
  python-dotenv

[options.packages.find]
where = src
exclude = 
  test*

[options.entry_points]
console_scripts =
  budgetcli = budgetcli.main:cli

[tool:pytest]
minversion = 6.0
addopts = -ra -q --cov
testpaths = tests

[coverage:run]
branch = True

[coverage:report]
show_missing = True
skip_covered = False

[coverage:paths]
source = 
  src/
