[metadata]
name = budgetcli
version = 1.0.4
author = Code Rustle
author_email = coderustle@gmail.com
description = A simple async budgeting app to manage expenses and budgets in google spreadsheets
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
classifiers =
    Topic :: Utilities
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.11

[options]
package_dir = 
  =src
packages = find:
include_package_data = True
install_requires =
  typer[all]
  google-auth
  google-auth-httplib2
  google-api-python-client
  google-auth-oauthlib
  platformdirs
  httpx

[options.packages.find]
where = src
exclude = 
  test*

[options.entry_points]
console_scripts =
  budgetcli = budgetcli.main:app

[tool:pytest]
minversion = 6.0
addopts = -ra -q --cov
testpaths = tests

[coverage:run]
branch = True

[coverage:report]
show_missing = True
skip_covered = False

[coverage:paths]
source = 
  src/
